results/SVCOMP/conversational/log-ExSymExeLCMP-2024_03_12_19_54_35.txt
class Main {
    //@ requires x >= 0 && y >= 0;
    //@ ensures \result == true <==> x + 1 <= x + 2;
    //@ ensures \result == false <==> x + 1 > x + 2;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x, 5);
    }

    //@ requires x >= 0 && y >= 0;
    //@ ensures \result == true <==> x + 1 <= x + 2;
    //@ ensures \result == false <==> x + 1 > x + 2;
    public boolean test(long x, long y) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else
            System.out.println("x <=0");
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:2: error: cannot find symbol
    //@ requires x >= 0 && y >= 0;
                           ^
  symbol:   variable y
  location: class Main
1 error

class Main {
    //@ requires x >= 0;
    //@ ensures \result == true <==> x + 1 <= x + 2;
    //@ ensures \result == false <==> x + 1 > x + 2;
    public static boolean f(long x) {
        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x >= 0;
    //@ ensures \result == true <==> x + 1 <= x + 2;
    //@ ensures \result == false <==> x + 1 > x + 2;
    public boolean test(long x) {

        long res = x;
        if (res + 1 > res + 2) {
            return false;
        } else
            System.out.println("x <=0");
        return true;
    }
}

